PO: Makefile.am: fix clean file
Signed-off-by: Tim Janik <timj@gnu.org>

--- a/po/Makefile.am
+++ b/po/Makefile.am
@@ -180,6 +180,7 @@ check-update-po: Makefile $(srcdir)/messages.pot
 	done ; echo
 	$(Q) rm -f check-messages.pot
 .PHONY: check-update-po
+CLEANFILES += check-messages.pot
 
 CLEANFILES += $(POTLIST) $(TMPLIST) $(TMPDIR)/
 
