PO: extract i18n messages from _(singular, plural, count) syntax
Signed-off-by: Tim Janik <timj@gnu.org>

--- a/po/Makefile.am
+++ b/po/Makefile.am
@@ -60,7 +60,7 @@ INTLFIXDIR   = $(top_builddir)/$(ac_aux_dir)
 #EXTRA_DIST += $(INTLFIXDIR)/intltool-merge  $(INTLFIXDIR)/intlfix-scm.sed
 #EXTRA_DIST += $(INTLFIXDIR)/intlfix-xml.awk $(INTLFIXDIR)/intlfix-las.awk
 CLEANFILES  += $(GMOFILES)
-KEYWORDS     = _ N_ U_ Q_
+KEYWORDS     = _ N_ U_ Q_ _:1,2,3t
 TEXTFLAGS    = _:1:pass-c-format
 POTLIST      = $(abs_builddir)/POTLIST
 TMPLIST      = $(abs_builddir)/POTLIST.tmp
