--- a/po/Makefile.am
+++ b/po/Makefile.am
@@ -56,7 +56,7 @@ TRANSLATIONS = $(if ${PO_LINGUAS}, ${PO_LINGUAS}, ${ALL_LINGUAS})
 GMOFILES     = $(patsubst %, %.gmo, $(TRANSLATIONS))
 POFILES      = $(patsubst %, %.po,  $(TRANSLATIONS))
 INTLFIXDIR   = $(top_builddir)/$(ac_aux_dir)
-#EXTRA_DIST += LINGUAS POTIGNORE potscan.list POTSKIP $(POFILES) messages.pot
+#EXTRA_DIST += LINGUAS POTIGNORE potscan.list POTSKIP $(POFILES) messages.po
 #EXTRA_DIST += $(INTLFIXDIR)/intltool-merge  $(INTLFIXDIR)/intlfix-scm.sed
 #EXTRA_DIST += $(INTLFIXDIR)/intlfix-xml.awk $(INTLFIXDIR)/intlfix-las.awk
 CLEANFILES  += $(GMOFILES)
@@ -126,7 +126,7 @@ CHECK_SCM_PATS=$(strip					\
 
 shdie = { echo "ERROR:" $(1) >&2 ; exit $(or $(2), 127) ; }
 
-merge-po: $(srcdir)/messages.pot # FILE=...
+merge-po: $(srcdir)/messages.po # FILE=...
 	@test -r "$(FILE)" || $(call shdie, "$@: source argument required: make $@ FILE=...")
 	@echo "Merging external po file: $(FILE)..."
 	@r=`realpath "$(FILE)"` ; for f in $(POFILES) ; do \
@@ -152,40 +152,40 @@ merge-po: $(srcdir)/messages.pot # FILE=...
 	  $(call shdie, "$@: failed to find po merging candidate; try renaming FILE") ; \
 	else \
 	  echo "Target for merging: $$c $$r" ; \
-	  $(MSGMERGE) -s -C "$$c" -o "$$c" "$(FILE)" $(srcdir)/messages.pot || exit $? ; \
+	  $(MSGMERGE) -F -C "$$c" -o "$$c" "$(FILE)" $(srcdir)/messages.po || exit $? ; \
 	  $(GMSGFMT) -o /dev/null --verbose "$$c" ; \
 	fi
 
 # force regeneration of all po files
 update-po: Makefile
-	@rm -f $(srcdir)/messages.pot # force rebuild
-	@$(MAKE) --no-print-directory $(srcdir)/messages.pot
-	@echo "Merging messages.pot into po files..."
+	@rm -f $(srcdir)/messages.po # force rebuild
+	@$(MAKE) --no-print-directory $(srcdir)/messages.po
+	@echo "  MERGE   " "messages.po into po files..."
 	@for i in $(POFILES) ; do \
-	  printf "%12s: " "$$i" ; \
-	  $(MSGMERGE) -qsU --backup=none $(srcdir)/$$i $(srcdir)/messages.pot || exit ; \
+	  printf "    %12s: " "$$i" ; \
+	  $(MSGMERGE) -qsU --backup=none $(srcdir)/$$i $(srcdir)/messages.po || exit ; \
 	  $(GMSGFMT) -o /dev/null --verbose $(srcdir)/$$i ; \
 	done
 .PHONY: update-po
-check-update-po: Makefile $(srcdir)/messages.pot
-	$(Q) rm -f check-messages.pot # force rebuild
-	$(Q) $(MAKE) --no-print-directory check-messages.pot
+check-update-po: Makefile $(srcdir)/messages.po
+	$(Q) rm -f check-messages.po # force rebuild
+	$(Q) $(MAKE) --no-print-directory check-messages.po
 	@echo -n "Checking for updated po files: "
 	$(Q) for i in $(POFILES) ; do \
 	  echo -n '.' ; \
-	  cp $(srcdir)/$$i xtmp-$$i && $(MSGMERGE) -qsU --backup=none xtmp-$$i check-messages.pot || exit ; \
+	  cp $(srcdir)/$$i xtmp-$$i && $(MSGMERGE) -qsU --backup=none xtmp-$$i check-messages.po || exit ; \
 	  cmp -s $(srcdir)/$$i xtmp-$$i || \
 	  { echo ; echo "$$i: error: message updates missing, run 'update-po' first" >&2 ; exit 1 ; } ; \
 	  rm -f xtmp-$$i ; \
 	done ; echo
-	$(Q) rm -f check-messages.pot
+	$(Q) rm -f check-messages.po
 .PHONY: check-update-po
-CLEANFILES += check-messages.pot
+CLEANFILES += check-messages.po
 
 CLEANFILES += $(POTLIST) $(TMPLIST) $(TMPDIR)/
 
 POTSCAN_MATCH = '(\.cc|\.hh|\.idl|\.xml|\.vue|\.js|\.html|\.(desktop|xml|keys)\.in)$$'
-POTSCAN_SKIP  = '(^|/)tests/|^aidacc/'
+POTSCAN_SKIP  = '^tests/|/tests/|^aidacc/|^plugins/evaluator/|^yapps2_deb/'
 
 potscan.list: $(GITSTAMP)
 	$(AM_V_GEN)
@@ -194,48 +194,50 @@ potscan.list: $(GITSTAMP)
 	$(Q) grep -vE $(POTSCAN_SKIP) $@.tmp2 > $@.tmp3
 	$(Q) mv $@.tmp3 $@ && rm -f $@.tmp1 $@.tmp2
 
-$(srcdir)/messages.pot check-messages.pot: potscan.list
-	@echo "Building $(@F)..."
-	@rm -f $(POTLIST) $(TMPLIST) ; rm -rf $(TMPDIR)/
-	@sed -e '/^#/d' -e 's/^\[[^:]*:[^]]*][[:space:]]*//' -e '/^[[:space:]]*$$/d' < potscan.list > $(POTLIST) \
-	&& cp $(POTLIST) $(TMPLIST) && mkdir -p $(TMPDIR)/
-	@$(foreach TYPE, $(POSRC_TYPES), \
-	  $(call prepare_pot_source, $(TYPE), $(TMPLIST)))
-	@test `wc -l < $(TMPLIST)` -eq 0 || { \
-	  echo "WARNING: unknown potscan.list entries:" ; \
-	  sed 's/^/  /' $(TMPLIST) ; \
-	} >&2
-	@echo "  Extracting translatable strings with xgettext..."
-	@$(XGETTEXT) -F -c -n -o $(abs_srcdir)/$(@F) --foreign-user \
-	  --language=C++ --from-code=UTF-8 \
-	  --files-from=$(POTLIST) \
-	  -D $(TMPDIR)/ -D $(abs_top_srcdir) \
-	  $(patsubst %, --keyword=%, $(KEYWORDS)) \
-	  $(patsubst %, --flag=%,    $(TEXTFLAGS)) \
-	  "--package-name=$(PACKAGE)" "--package-version=$(VERSION)"
-	@rm -f $(POTLIST) $(TMPLIST) ; rm -rf $(TMPDIR)/
-# (split_lines, INPUT, OUTPUT, pattern)
+# (split_lines, INPUTFILE, OUTPUTFILE, pattern)
 split_lines = test -e $(1) -a -w . && { \
-	grep  -e $(3) < $(1) > $(2) ; \
-	grep -ve $(3) < $(1) > $(1)-$$$$ ; \
+	grep  -Ee $(3) < $(1) > $(2) ; \
+	grep -vEe $(3) < $(1) > $(1)-$$$$ ; \
 	mv $(1)-$$$$ $(1) ; \
 }
-# (prepare_pot_source, POSRC_TYPE, INFILE)
-define prepare_pot_source
-	DOING=$(if $(POSRC_$(strip $(1))_FILTER),"Preparing","Listing") ; \
-	printf "  %-32s" "$$DOING $(strip $(or $(POSRC_$(strip $(1))_NAME), $(1) Files)): " ; \
-	$(call split_lines, $(2), "potlist$$$$.tmp", $(POSRC_$(strip $(1))_PATTERN)) && \
-	wc -l < "potlist$$$$.tmp" || exit ; \
-	$(if $(POSRC_$(strip $(1))_FILTER), \
-	  while read file ; do \
+
+XGETTEXT_TMPDIR = $(XGETTEXT) "--package-name=$(PACKAGE)" "--package-version=$(VERSION)" -F -c -n \
+		  --foreign-user --from-code=UTF-8 -D $(TMPDIR)/ -D $(abs_top_srcdir) \
+		  $(patsubst %, --keyword=%, $(KEYWORDS)) $(patsubst %, --flag=%,    $(TEXTFLAGS))
+
+$(srcdir)/messages.po check-messages.po: potscan.list
+	$(AM_V_GEN)
+	$(Q) rm -f potscan.all potscan.tmp && rm -rf $(TMPDIR)/
+	$(Q) cp potscan.list potscan.all && mkdir -p $(TMPDIR)/
+	$(Q) # process .idl files as C++
+	$(Q) $(call split_lines, potscan.all, potscan.tmp, '\.idl$$')
+	$(Q) $(XGETTEXT_TMPDIR) -f potscan.tmp -o messages.po --force-po -L C++
+	$(Q) sed -r '1,20 s/^("Content-Type:.*)CHARSET/\1UTF-8/' -i messages.po
+	$(Q) # extract .xml and .html files and parse as JS
+	$(Q) $(call split_lines, potscan.all, potscan.tmp, '\.(xml|html)(.in)?$$')
+	$(Q)  while read file ; do \
 	    d=`dirname "$$file"` && mkdir -p "$(TMPDIR)/$$d" || exit ; \
-	    $(POSRC_$(strip $(1))_FILTER) $(top_srcdir)/"$$file" > "$(TMPDIR)/$$file" || exit ; \
-	  done < "potlist$$$$.tmp" \
-	, \
-	  : \
-	) ; rm -f "potlist$$$$.tmp"
-	$(NEWLINE)
-endef # GNU Make needs an explicit last newline
+	    ./xt9n-xml.py $(top_srcdir)/"$$file" > "$(TMPDIR)/$$file" || exit ; \
+	  done < potscan.tmp
+	$(Q) $(XGETTEXT_TMPDIR) -f potscan.tmp -o messages.po -j -L Javascript
+	$(Q) # extract .keys and .desktop files and parse as C
+	$(Q) $(call split_lines, potscan.all, potscan.tmp, '\.(keys|desktop)(\.in)?$$')
+	$(Q)  while read file ; do \
+	    d=`dirname "$$file"` && mkdir -p "$(TMPDIR)/$$d" || exit ; \
+	    gawk -f $(INTLFIXDIR)/intlfix-las.awk $(top_srcdir)/"$$file" > "$(TMPDIR)/$$file" || exit ; \
+	  done < potscan.tmp
+	$(Q) $(XGETTEXT_TMPDIR) -f potscan.tmp -o messages.po -j -L C
+	$(Q) # extract .vue files and parse as JS
+	$(Q) $(call split_lines, potscan.all, potscan.tmp, '\.vue$$')
+	$(Q)  while read file ; do \
+	    d=`dirname "$$file"` && mkdir -p "$(TMPDIR)/$$d" || exit ; \
+	    sed '1,/^<script\b/ s/.*// ; /^<\/script>/ s/.*//' $(top_srcdir)/"$$file" > "$(TMPDIR)/$$file" || exit ; \
+	  done < potscan.tmp
+	$(Q) $(XGETTEXT_TMPDIR) -f potscan.tmp -o messages.po -j -L Javascript
+	$(Q) # process remaining files with language detection
+	$(Q) $(XGETTEXT_TMPDIR) -f potscan.all -o messages.po -j
+	$(Q) # cleanup
+	$(Q) rm -rf $(TMPDIR)/ && rm -f potscan.all
 
 unlisted:
 	@echo "Creating source file list..."
