--- a/configure.ac
+++ b/configure.ac
@@ -185,8 +185,8 @@ optimization_flags="-O3 -funroll-loops -ftree-vectorize $no_invalid_flags"
 FAST_MATH_FLAGS="-ffast-math"
 gcc_flags="-rdynamic -finline-functions -ftracer -ftree-loop-distribution -ftree-loop-ivcanon -ftree-loop-im -fno-delete-null-pointer-checks"
 gcc_fast_math="-fivopts"
-clang_fix_flags="-Qunused-arguments"		# avoid bogus -pthread warning (llvm#7798)
-clang_fix_flags="$clang_fix_flags -Wno-tautological-compare"
+clang_fix_flags="-Wno-unused-command-line-argument"	# avoid bogus -pthread warning (llvm#7798)
+clang_fix_flags="$clang_fix_flags -Wno-tautological-compare -Wno-constant-logical-operand"
 x86_flags="-minline-all-stringops"
 x86_flags="$x86_flags -mmmx -msse -msse2"	# Intel since 2001, AMD since 2003
 x86_flags="$x86_flags -msse3"			# Intel since 2004, AMD since 2007
