--- a/misc/Dockerfile-apt.in
+++ b/misc/Dockerfile-apt.in
@@ -34,11 +34,10 @@ ENV  INTENT		"@INTENT@"
 RUN `intent clangbuild` && \
     retry apt-get install -y clang
 
-# Provide dependencies
+# Provide dependencies, old distributions ship a 'nodejs-legacy' package
 RUN retry apt-get install -y \
-    cython gawk libxml-parser-perl \
-    libpango1.0-dev python2.7-dev libxml2-dev libreadline6-dev \
-    libreadline-dev python-all-dev \
+    gawk libxml-parser-perl \
+    libpango1.0-dev python2.7-dev libxml2-dev libreadline6-dev libreadline-dev \
     libasound2-dev libflac-dev libvorbis-dev libmad0-dev libgnomecanvas2-dev libfluidsynth-dev \
     imagemagick npm libgconf-2-4 \
     nodejs"$(apt-cache -qn search ^nodejs-legacy | grep -oe -legacy)"
