SFI: sfidl: remove --nostdinc argument
Signed-off-by: Tim Janik <timj@gnu.org>

--- a/Makefile.am
+++ b/Makefile.am
@@ -21,7 +21,7 @@ noinst_LTLIBRARIES	 =
 YAPPS                    = $(PYTHON) $(topdir)/yapps2_deb/yapps2.py
 AIDACC                   = $(topdir)/aidacc/aidacc
 SFIDL                    = $(top_builddir)/sfi/sfidl
-SFIDL_INC                = --nostdinc -I$(top_srcdir) -I$(top_builddir)
+SFIDL_INC                = -I$(top_srcdir) -I$(top_builddir)
 BSEFEXTRACT		 = $(top_builddir)/tools/bsefextract
 BSEFCOMPARE		 = $(top_builddir)/tools/bsefcompare
 
