--- a/plugins/Makefile.am
+++ b/plugins/Makefile.am
@@ -34,7 +34,7 @@ CLEANFILES += doc_sources.lst
 
 # setup generation of C++ plugins from idl files
 SFIDL = ../sfi/sfidl
-SFIDL_INC = --nostdinc -I$(top_srcdir) -I$(top_builddir)
+SFIDL_INC = -I$(top_srcdir) -I$(top_builddir)
 %.genidl.hh: %.idl # $(SFIDL)
 	$(SFIDL) --plugin  --macro $(<F) $(SFIDL_INC) -I$(top_builddir) $< > $@ || (rm $@ ; exit 1 )
 
