SFI: tests/Makefile.am: disable libsfi tests
Signed-off-by: Tim Janik <timj@gnu.org>

--- a/sfi/tests/Makefile.am
+++ b/sfi/tests/Makefile.am
@@ -10,25 +10,25 @@ noinst_PROGRAMS   = $(ALLTESTS)
 SFIDL 		  = $(top_builddir)/sfi/sfidl
 
 # ring
-TAPTESTS     += ring
+#TAPTESTS     += ring
 ring_CXXFLAGS = $(AM_CXXFLAGS) $(SFI_CFLAGS)
 ring_LDADD    = $(top_builddir)/sfi/libsfi-@MAJOR@.la
 ring_SOURCES  = ring.cc
 
 # misctests
-TAPTESTS          += misctests
+#TAPTESTS          += misctests
 misctests_CXXFLAGS = $(AM_CXXFLAGS) $(SFI_CFLAGS)
 misctests_LDADD	   = $(top_builddir)/sfi/libsfi-@MAJOR@.la $(LIBZ_LIBS)
 misctests_SOURCES  = misctests.cc utf8tests.cc
 
 # testcxx
-TAPTESTS	+= testcxx
+#TAPTESTS	+= testcxx
 testcxx_CXXFLAGS = $(AM_CXXFLAGS) $(SFI_CFLAGS)
 testcxx_LDADD	 = $(top_builddir)/sfi/libsfi-@MAJOR@.la
 testcxx_SOURCES  = testcxx.cc
 
 # testsfidl
-TAPTESTS          += testsfidl
+#TAPTESTS          += testsfidl
 testsfidl_CXXFLAGS = $(AM_CXXFLAGS) $(SFI_CFLAGS)
 testsfidl_LDADD    = $(top_builddir)/sfi/libsfi-@MAJOR@.la
 testsfidl_SOURCES  = testsfidl.cc
